<resources>
    <string name="app_name">Uygulama</string>
    <string name="app_main_header">Logo</string>
    <string name="app_buttons_login">Giriş Yap</string>
    <string name="app_buttons_sign_up">Kayıt Ol</string>
    <string name="app_buttons_stu_info">201813709066 - Işıl Vatansever</string>
    <string name="app_login_or">ve ya</string>
    <string name="app_email">E-Posta</string>
    <string name="app_password">Şifre</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Slogan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Grup Oluştur</string>
    <string name="menu_gallery">Gruba Üye Ekle</string>
    <string name="menu_slideshow">Mesaj Oluştur</string>
    <string name="menu_send_message">Mesaj Gönder</string>
    <string name="menu_logout">Çıkış Yap</string>
</resources>